--- a/assignment2 (1).ipynb
+++ b/assignment2 (1).ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "#Question 1\n",
-    "# there are three different type of to comment the code\n",
+    "# there are three different types of method to comment the code\n",
     "# 1. single line comment code\n",
     "# In this type comment the single code\n",
     "# example\n",
