--- a/My_SQL (1).ipynb
+++ b/My_SQL (1).ipynb
@@ -235,7 +235,19 @@
    "id": "45abb176-81af-4665-8df5-6269b55be66f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#The order of execution of SQL clauses in an SQL query is as follows:\n",
+    "\n",
+    "#1. FROM clause: This clause specifies the table or tables from which the data is being retrieved.\n",
+    "#2. WHERE clause: This clause is used to filter the data based on certain conditions.\n",
+    "#3. GROUP BY clause: This clause is used to group the data based on one or more columns.\n",
+    "#4. HAVING clause: This clause is used to filter the grouped data based on certain conditions.\n",
+    "#5. SELECT clause: This clause is used to select the columns or expressions to be included in the result set.\n",
+    "#6. ORDER BY clause: This clause is used to sort the result set in a specific order.\n",
+    "#7. LIMIT or OFFSET clause: These clauses are used to limit the number of rows returned or to skip a certain number of rows in the result set.\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
